fix sidebar collapse resetting contents

--- a/web/src/components/Sidebar/styles.module.css
+++ b/web/src/components/Sidebar/styles.module.css
@@ -47,6 +47,10 @@
   width: 20rem;
 }
 
+.contents:not(.expand) {
+  display: none;
+}
+
 .content {
   display: flex;
   min-height: 10rem;
